--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </aside>
         <div id="content" class="md:col-span-4 space-y-6">
 
-      <div id="topCards" class="grid grid-cols-2 md:grid-cols-4 gap-4 sec-general"></div>
+      <div class="sec-general">
+        <h2 class="text-xl font-semibold mb-2">General</h2>
+        <div id="generalTopCards" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+      </div>
 
       <div class="bg-white p-4 rounded shadow sec-general">
         <h3 class="text-lg font-semibold mb-4">Escala robusta</h3>
@@ -64,7 +67,54 @@
 
       
 
-    <div id="otherCards" class="grid md:grid-cols-3 gap-4 sec-general"></div>
+    <div id="generalOtherCards" class="grid md:grid-cols-3 gap-4 sec-general"></div>
+        
+        <hr class="my-6" />
+        <div id="setHeader" class="mb-2">
+          <h2 class="text-xl font-semibold">Set actual: <span id="currentSetLabel">—</span></h2>
+        </div>
+
+        <div id="setTopCards" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+
+        <div class="bg-white p-4 rounded shadow mt-4">
+          <h3 class="text-lg font-semibold mb-4">Escala robusta (Set)</h3>
+          <div class="h-24">
+            <canvas id="setRobustBullet"></canvas>
+          </div>
+        </div>
+
+        <div class="grid md:grid-cols-2 gap-4 mt-2">
+          <div>
+            <h3 class="text-lg font-semibold mb-2">Histograma horario (Set)</h3>
+            <canvas id="setHourChart" class="bg-white p-2 rounded" height="200"></canvas>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold mb-2">Ráfagas por ventana (Set)</h3>
+            <canvas id="setVelocityBurstChart" class="bg-white p-2 rounded" height="200"></canvas>
+          </div>
+        </div>
+
+        <div class="mt-2">
+          <h3 class="text-lg font-semibold mb-2">Recencia (Set)</h3>
+          <div id="setRecencyBullet" class="bg-white p-2 rounded w-full h-48"></div>
+        </div>
+
+        <div class="grid md:grid-cols-3 gap-4 mt-2">
+          <div>
+            <h3 class="text-lg font-semibold mb-2">Frecuencia por tipo (Set)</h3>
+            <canvas id="setTypeFreqDonut" class="bg-white p-2 rounded w-full" height="200"></canvas>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold mb-2">Rachas 30m OUT vs IN (Set)</h3>
+            <canvas id="setStreaksDivergent" class="bg-white p-2 rounded w-full" height="200"></canvas>
+          </div>
+          <div>
+            <h3 class="text-lg font-semibold mb-2">Tasa de alternancia (Set)</h3>
+            <canvas id="setAlternationGauge" class="bg-white p-4 rounded w-full h-48"></canvas>
+          </div>
+        </div>
+
+        <div id="setOtherCards" class="grid md:grid-cols-3 gap-4 mt-2"></div>
         </div>
       </div>
     </div>
@@ -785,36 +835,41 @@
         return ch;
       }
 
-      function renderAll(general) {
-        clearContainers();
+      function renderGeneral(general) {
+        // limpia general containers
+        const gTop = document.getElementById('generalTopCards');
+        const gOther = document.getElementById('generalOtherCards');
+        if (gTop) gTop.innerHTML = '';
+        if (gOther) gOther.innerHTML = '';
+
         setTierMeta(general);
 
       if (general.totals) {
           addTopCard(
-            "topCards",
+            "generalTopCards",
             "Operaciones",
             general.totals.n_trx,
             ICONS.operaciones,
             "text-blue-500",
           );
           addTopCard(
-            "topCards",
+            "generalTopCards",
             "Ingresos",
             general.totals.sum_in,
             ICONS.ingresos,
             "text-green-500",
           );
           addTopCard(
-            "topCards",
+            "generalTopCards",
             "Egresos",
             general.totals.sum_out,
             ICONS.egresos,
             "text-red-500",
           );
-          addTopCard("topCards", "Neto", general.totals.net, ICONS.neto, "text-gray-500");
+          addTopCard("generalTopCards", "Neto", general.totals.net, ICONS.neto, "text-gray-500");
         } else if (typeof general.n_trx === 'number') {
           addTopCard(
-            "topCards",
+            "generalTopCards",
             "Operaciones",
             general.n_trx,
             ICONS.operaciones,
@@ -973,7 +1028,7 @@
 
       if (general.robust_stats)
         addCard(
-          "otherCards",
+          "generalOtherCards",
           "Estadísticas robustas",
           general.robust_stats,
           LABELS.robust_stats,
@@ -981,9 +1036,9 @@
       //if (data.velocity)
       //  addCard("otherCards", "Velocidad", data.velocity, LABELS.velocity);
       if (general.recency)
-        addCard("otherCards", "Recencia", general.recency, LABELS.recency);
+        addCard("generalOtherCards", "Recencia", general.recency, LABELS.recency);
       if (general.novelty)
-        addCard("otherCards", "Novedad", general.novelty, LABELS.novelty);
+        addCard("generalOtherCards", "Novedad", general.novelty, LABELS.novelty);
       //if (data.type_freq)
       //  addCard("otherCards", "Frecuencia por tipo", data.type_freq);
       //if (data.type_group_freq)
@@ -993,19 +1048,107 @@
        //   data.type_group_freq,
        // );
       if (general.roundness)
-        addCard("otherCards", "Redondez", general.roundness, LABELS.roundness);
+        addCard("generalOtherCards", "Redondez", general.roundness, LABELS.roundness);
       //if (data.streaks)
       //  addCard("otherCards", "Rachas", data.streaks, LABELS.streaks);
       if (general.location)
-        addCard("otherCards", "Ubicación", general.location, LABELS.location);
-      if (general.flow) addCard("otherCards", "Flujo", general.flow, LABELS.flow);
+        addCard("generalOtherCards", "Ubicación", general.location, LABELS.location);
+      if (general.flow) addCard("generalOtherCards", "Flujo", general.flow, LABELS.flow);
       //if (data.coherence)
       //  addCard("otherCards", "Coherencia", data.coherence, LABELS.coherence);
       if (general.status)
-        addCard("otherCards", "Estado", general.status, LABELS.status);
+        addCard("generalOtherCards", "Estado", general.status, LABELS.status);
       if (general.duplicates)
-        addCard("otherCards", "Duplicados", general.duplicates, LABELS.duplicates);
+        addCard("generalOtherCards", "Duplicados", general.duplicates, LABELS.duplicates);
+      }
 
+      function renderSet(s, setKey) {
+        // Limpia set containers
+        ['setTopCards','setOtherCards'].forEach((id) => { const el = document.getElementById(id); if (el) el.innerHTML = ''; });
+        // Destroy charts
+        ['setHourChart','setVelocityBurstChart','setTypeFreqDonut','setStreaksDivergent','setRobustBullet'].forEach((id) => {
+          const c = document.getElementById(id);
+          if (c && c._chartInstance) { try { c._chartInstance.destroy(); } catch(e){} }
+        });
+        const setLabelEl = document.getElementById('currentSetLabel');
+        if (setLabelEl) setLabelEl.textContent = formatSetLabel(setKey || '—');
+
+        // Totals / n_trx cards
+        if (s.totals) {
+          addTopCard('setTopCards','Operaciones', s.totals.n_trx, ICONS.operaciones, 'text-blue-500');
+          addTopCard('setTopCards','Ingresos', s.totals.sum_in, ICONS.ingresos, 'text-green-500');
+          addTopCard('setTopCards','Egresos', s.totals.sum_out, ICONS.egresos, 'text-red-500');
+          addTopCard('setTopCards','Neto', s.totals.net, ICONS.neto, 'text-gray-500');
+        } else if (typeof s.n_trx === 'number') {
+          addTopCard('setTopCards','Operaciones', s.n_trx, ICONS.operaciones, 'text-blue-500');
+        }
+
+        if (s.robust_stats || s.median_abs != null || s.p95_abs != null) {
+          renderRobustBullet('setRobustBullet', s, { currency: 'ARS' });
+        }
+
+        if (s.temporal && s.temporal.hour_hist) {
+          const hist = s.temporal.hour_hist;
+          const hours = Object.keys(hist).map((h) => parseInt(h)).sort((a,b)=>a-b);
+          const counts = hours.map((h) => hist[h]);
+          chartOn('setHourChart', {
+            type: 'bar',
+            data: { labels: hours, datasets: [{ label:'Operaciones', data: counts, backgroundColor: '#0d6efd' }] },
+            options: { scales: { y: { beginAtZero: true } } },
+          });
+        }
+
+        if (s.velocity) {
+          const v = s.velocity;
+          chartOn('setVelocityBurstChart', {
+            type: 'bar',
+            data: { labels: ['5m','30m','60m','24h'], datasets: [{ label: 'Ráfagas', data: [v.max_cnt_5m, v.max_cnt_30m, v.max_cnt_60m, v.max_cnt_24h], backgroundColor: '#f59e0b' }] },
+            options: { scales: { y: { beginAtZero: true } } },
+          });
+        }
+
+        if (s.type_freq) {
+          const tfLabels = Object.keys(s.type_freq);
+          const tfValues = tfLabels.map((k) => s.type_freq[k]);
+          chartOn('setTypeFreqDonut', {
+            type: 'doughnut',
+            data: { labels: tfLabels, datasets: [{ data: tfValues, backgroundColor: ['#3b82f6','#10b981','#f59e0b','#ef4444','#6366f1'] }] },
+            options: { plugins: { legend: { position: 'bottom' } } },
+          });
+        }
+
+        if (s.recency && s.recency.delta_hist) delete s.recency.delta_hist;
+        if (s.recency) {
+          renderRecencyBullet('setRecencyBullet', s, { title: 'Recencia • Min–Max, P05–P95, IQR y medidas' });
+        }
+
+        if (s.streaks) {
+          const st = s.streaks;
+          const maxVal = Math.max(st.max_in_30m || 0, st.max_out_30m || 0);
+          chartOn('setStreaksDivergent', {
+            type: 'bar',
+            data: { labels: [''], datasets: [ { label: 'OUT', data: [-(st.max_out_30m || 0)], backgroundColor: '#ef4444' }, { label: 'IN', data: [st.max_in_30m || 0], backgroundColor: '#10b981' } ] },
+            options: { indexAxis: 'y', scales: { x: { min: -maxVal, max: maxVal, ticks: { precision: 0 } }, y: { stacked: true, display: false } }, plugins: { legend: { display: false } } },
+          });
+
+          const gaugeCanvas = document.getElementById('setAlternationGauge');
+          if (gaugeCanvas) {
+            const gaugeOpts = { angle: 0, lineWidth: 0.2, radiusScale: 1, pointer: { length: 0.6, strokeWidth: 0.035, color: '#111827' }, limitMax: true, limitMin: true, strokeColor: '#E5E7EB', staticZones: [ { strokeStyle: '#10b981', min: 0, max: 0.33 }, { strokeStyle: '#f59e0b', min: 0.33, max: 0.66 }, { strokeStyle: '#ef4444', min: 0.66, max: 1 } ], staticLabels: { font: '10px sans-serif', labels: [0,0.5,1], fractionDigits: 2 } };
+            const gauge = new Gauge(gaugeCanvas).setOptions(gaugeOpts);
+            gauge.maxValue = 1; gauge.setMinValue(0); gauge.animationSpeed = 32; gauge.set(st.alternation_rate || 0);
+          }
+        }
+
+        // Other cards
+        if (s.temporal) { const tmp = { ...s.temporal }; delete tmp.hour_hist; addCard('setOtherCards','Temporal', tmp, LABELS.temporal); }
+        if (s.robust_stats) addCard('setOtherCards','Estadísticas robustas', s.robust_stats, LABELS.robust_stats);
+        if (s.recency) addCard('setOtherCards','Recencia', s.recency, LABELS.recency);
+        if (s.novelty) addCard('setOtherCards','Novedad', s.novelty, LABELS.novelty);
+        if (s.roundness) addCard('setOtherCards','Redondez', s.roundness, LABELS.roundness);
+        if (s.location) addCard('setOtherCards','Ubicación', s.location, LABELS.location);
+        if (s.flow) addCard('setOtherCards','Flujo', s.flow, LABELS.flow);
+        if (s.status) addCard('setOtherCards','Estado', s.status, LABELS.status);
+        if (s.duplicates) addCard('setOtherCards','Duplicados', s.duplicates, LABELS.duplicates);
       }
 
       const rawPre = document.getElementById("rawJson");
@@ -1033,10 +1176,10 @@
         const active = document.querySelector(`#sidebarNav [data-set="${key}"]`);
         if (active) active.classList.add('bg-gray-200', 'text-gray-900');
         const s = sets[key] || {};
-        renderAll(s);
+        renderSet(s, key);
         try { window.dispatchEvent(new Event('resize')); } catch (e) {}
-        if (window.Plotly && document.getElementById('recencyBullet')) {
-          try { Plotly.Plots.resize('recencyBullet'); } catch (e) {}
+        if (window.Plotly) {
+          try { Plotly.Plots.resize('recencyBullet'); Plotly.Plots.resize('setRecencyBullet'); } catch (e) {}
         }
       }
       function setupSidebar() {
@@ -1060,6 +1203,8 @@
           btn.addEventListener('click', () => selectSet(key));
           nav.appendChild(btn);
         });
+        // Render general first
+        if (sets.global) renderGeneral(sets.global);
         const defaultKey = keys.includes('global') ? 'global' : (keys[0] || null);
         if (defaultKey) selectSet(defaultKey);
       }
